--- a/gui/index.html
+++ b/gui/index.html
@@ -6,6 +6,6 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-
+		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
