--- a/gui/index.html
+++ b/gui/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
+		<script type="text/javascript" src="js/vga.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
