--- a/gui/index.html
+++ b/gui/index.html
@@ -3,9 +3,12 @@
 	<head>
 		<title>JsOS-emu</title>
 
+		<link rel="stylesheet" type="text/css" href="css/vga.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
+		<table id="vga" class="vga"></table>
+
 		<script type="text/javascript" src="js/vga.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
