--- a/gui/index.html
+++ b/gui/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<table id="vga" class="vga"></table>
 
+		<script type="text/javascript" src="js/keyboard.js"></script>
 		<script type="text/javascript" src="js/vga.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
